# Noosphere

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SKILL.md  TODO.md  UPDATE.md  X_test.txt  config.json.example  pyproject.toml  requirements.txt  skill.sh
.claude-plugin/: plugin.json
platform_rules.example/: wechat_mp.json  x.json  xiaoheihe.json  zhihu_zhuanlan.json
prompts/: image_review.md  pre_upload_review.md  pre_upload_review_social.md  review_metadata.md  review_metadata_social.md  rewrite_article.md  rewrite_social_post.md
references/: firecrawl_SKILL.md
skills/noosphere/: SKILL.md
src/: __init__.py  classifier.py  cli.py  extractor_registry.py
src/common_func/: __init__.py  article.py  assets.py  crawler.py  siyuan.py
src/core/: __init__.py  ai_review.py  article.py  base_extractor.py  config.py  email_report.py  manifest.py  markdown.py  markdown_links.py  markdown_upload.py  output_paths.py  platform_rules.py  registry.py  review_report.py  review_validation.py  rules_review.py
src/integrations/: __init__.py  ai_client.py  assets.py  crawler.py  email_adapter.py  markdown_to_email.py  siyuan.py
test/: conftest.py  test_ai_review.py  test_assets.py  test_base_extractor.py  test_classifier.py  test_crawler.py  test_email_adapter.py  test_email_report.py  test_markdown_links.py  test_markdown_to_email.py  test_platform_cleaning.py  test_platform_extractors.py  test_platform_rules.py  test_review_report.py  test_review_validation.py  test_rules_review.py  test_x_extractor.py
website-frontend/: index.html
(+78 files in other folders)
