[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "noosphere"
version = "0.1.3.dev0"
description = "Article extraction, AI review, and note-import tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.8",
    "beautifulsoup4>=4.10",
    "crawl4ai>=0.8.0",
    "markdown>=3.4",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.scripts]
nsphr = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]
